--- a/src/App.css
+++ b/src/App.css
@@ -1,54 +1,38 @@
 .App {
-  width: 100%;
+  text-align: center;
 }
-.app-header {
-    background-color: transparent; /* 헤더 배경색 설정 */
-    padding: 10px 0;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
   }
-  
-  .header-content {
-    
-    /* max-width: 1200px; 또는 원하는 최대 너비 */
-    margin: 0 auto;
-    padding: 0 20px;
+}
+
+.App-header {
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+.App-link {
+  color: #61dafb;
+}
+
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
   }
-  
-  h1 {
-    margin: 0;
+  to {
+    transform: rotate(360deg);
   }
-  
-  .login-button {
-    padding: 8px 16px;
-    background-color: #007bff;
-    color: white;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    font-size: 14px;
-  }
-  
-  .login-button:hover {
-    background-color: #0056b3;
-  }
-  
-  .main-image {
-    width: 100%;
-    text-align: center;
-    background-color: #cff4fc;
-  }
-  /* width =  100%*/
-  .main-image img {
-    max-width: 100%; 
-    height: auto;
-  }
-  
-  /* 네비게이션 바 스타일 (Nav 컴포넌트에 적용) */
-  nav {
-    background-color: #343a40;
-    padding: 10px 0;
-  }
-  
-  /* 여기에 Nav 컴포넌트의 추가 스타일을 정의하세요 */
+}
