--- a/src/adm_f/component/Login/login.css
+++ b/src/adm_f/component/Login/login.css
@@ -1,4 +1,4 @@
-.modal-overlay {
+.adm-modal-overlay {
     position: fixed;
     top: 0;
     left: 0;
@@ -10,28 +10,28 @@
     align-items: center;
   }
   
-  .modal-content {
+  .adm-modal-content {
     background-color: white;
     padding: 20px;
     border-radius: 5px;
     width: 300px;
   }
   
-  .form-group {
+  .adm-form-group {
     margin-bottom: 15px;
   }
   
-  .form-group label {
+  .adm-form-group label {
     display: block;
     margin-bottom: 5px;
   }
   
-  .form-group input {
+  .adm-form-group input {
     width: 100%;
     padding: 5px;
   }
   
-  .button-group {
+  .adm-button-group {
     display: flex;
     justify-content: space-between;
   }
