--- a/src/adm_f/component/admNav/admNav.css
+++ b/src/adm_f/component/admNav/admNav.css
@@ -1,5 +1,5 @@
 .adm-mydex-header {
-    width: 85%;
+    width: 90%;
     margin: 0 auto;
     background-color: #DC143C;
     color: white;
@@ -7,4 +7,5 @@
     font-size: 25px;
     font-weight: bold;
     border-radius: 15px;
+    margin-top: 55px;
 }
