--- a/src/adm_f/component/Card/card.css
+++ b/src/adm_f/component/Card/card.css
@@ -1,5 +1,4 @@
-Card.css
-.program-card {
+.adm_program-card {
     border-radius: 10px;
     overflow: hidden;
     background: white;
@@ -9,14 +8,14 @@ Card.css
     flex-direction: column;
 }
 
-.card-image {
+.adm_card-image {
     height: 180px;
     background-size: cover;
     background-position: center;
     position: relative;
 }
 
-.like-button {
+.adm_like-button {
     position: absolute;
     top: -1px;          /* 상단 여백 줄임 */
     right: 0px;        /* 우측 여백 줄임 */
@@ -31,7 +30,7 @@ Card.css
     cursor: pointer;
 }
 
-.like-icon-wrapper {
+.adm_like-icon-wrapper {
     position: relative;
     color: white;      /* 하트 색상 흰색으로 변경 */
     font-size: 24px;   /* 하트 크기 조정 */
@@ -40,7 +39,7 @@ Card.css
     align-items: center;
 }
 
-.like-count {
+.adm_like-count {
     position: absolute;
     font-size: 12px;
     font-weight: 500;
@@ -50,7 +49,7 @@ Card.css
     transform: translate(-50%, -50%);
 }
 
-.card-content {
+.adm_card-content {
     padding: 16px;
     flex: 1;
     display: flex;
@@ -58,7 +57,7 @@ Card.css
     justify-content: space-between;
 }
 
-.card-title {
+.adm_card-title {
     font-size: 15px;
     font-weight: 500;
     margin-bottom: 12px;
@@ -66,23 +65,23 @@ Card.css
     color: #333;
     height: 42px;
     overflow: hidden;
-    display: -webkit-box;
+    /* display: -webkit-box;
     -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
+    -webkit-box-orient: vertical; */
 }
 
-.period-info {
+.adm_period-info {
     font-size: 13px;
     color: #666;
     margin-bottom: 12px;
 }
 
-.period-info p {
+.adm_period-info p {
     margin: 4px 0;
     line-height: 1.4;
 }
 
-.status-button {
+.adm_status-button {
     width: 100%;
     padding: 10px;
     border: none;
@@ -94,17 +93,17 @@ Card.css
     margin-top: auto;
 }
 
-.status-button.운영중 {
+.adm_status-button.운영중 {
     background-color: #4B9EFF;
     color: white;
 }
 
-.status-button.대기중 {
+.adm_status-button.대기중 {
     background-color: #e9ecef;
     color: #495057;
 }
 
-.status-button.설문조사 {
+.adm_status-button.설문조사 {
     background-color: #e9ecef;
     color: #495057;
 }
