--- a/src/adm_f/component/MoneyBt/moneybt.css
+++ b/src/adm_f/component/MoneyBt/moneybt.css
@@ -1,47 +1,43 @@
-.budget-form-container {
-  max-width: 83%;
-  margin: 0 auto;
-  padding: 20px;
-  border-radius: 15px;
-  background-color: #f9f9f9;
-}
-
-.form-title {
+.adm_form-title {
+  width: 80%;
   text-align: center;
   color: white;
   background-color: #2c3e50;
-  padding: 10px;
+  padding: 7px;
   margin-bottom: 20px;
   border-radius: 15px;
+  margin: 0 auto;
+  margin-bottom: 40px;
 }
 
-.form-group {
+.adm_form-group {
   margin-bottom: 15px;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.form-group label {
+.adm_form-group label {
   display: block;
   margin-bottom: 5px;
   font-weight: bold;
 }
 
-.form-group input {
-  width: 35%;
-  padding: 8px;
+.adm_form-group input {
+  width: 20%;
+  padding: 15px;
   border: 1px solid #ddd;
   border-radius: 4px;
+  margin: 15;
 }
 
-.button-container {
+.adm_button-container {
   display: flex;
   justify-content: flex-end;
   margin-top: 20px;
 }
 
-.submit-button {
+.adm_submit-button {
   width: auto;
   padding: 10px 20px;
   background-color: #c41e3a;
@@ -51,13 +47,14 @@
   cursor: pointer;
   font-size: 16px;
   transition: background-color 0.3s;
+  margin-right: 10%; /* 오른쪽 여백 추가 */
 }
 
-.submit-button:hover {
+.adm_submit-button:hover {
   background-color: #a01830;
 }
 
-.message {
+.adm_message {
   text-align: center;
   margin-top: 20px;
   padding: 10px;
@@ -65,13 +62,13 @@
   font-weight: bold;
 }
 
-.message.success {
+.adm_message.success {
   background-color: #d4edda;
   color: #155724;
   border: 1px solid #c3e6cb;
 }
 
-.message.error {
+.adm_message.error {
   background-color: #f8d7da;
   color: #721c24;
   border: 1px solid #f5c6cb;
