--- a/src/adm_f/component/detailcomponent/AuditPopup.css
+++ b/src/adm_f/component/detailcomponent/AuditPopup.css
@@ -1,49 +1,49 @@
 /* src/detailcomponent/DetailPopup.css */
-.popup {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 1000;
-  }
-  
-  .popup-content {
-    background-color: white;
-    padding: 20px;
-    border-radius: 5px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    min-width: 300px;
-    text-align: center;
-  }
-  
-  .popup-content h2 {
-    color: #c41e3a;
-    margin-bottom: 20px;
-  }
-  
-  .popup-content h3 {
-    margin: 10px 0;
-  }
-  
-  .popup-content p {
-    margin: 10px 0;
-  }
-  
-  .popup-content button {
-    background-color: #c41e3a;
-    color: white;
-    border: none;
-    padding: 10px 20px;
-    border-radius: 5px;
-    cursor: pointer;
-    margin-top: 20px;
-  }
-  
-  .popup-content button:hover {
-    background-color: #a01830;
-  }
+.adm_popup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.adm_popup-content {
+  background-color: white;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  min-width: 300px;
+  text-align: center;
+}
+
+.adm_popup-content h2 {
+  color: #c41e3a;
+  margin-bottom: 20px;
+}
+
+.adm_popup-content h3 {
+  margin: 10px 0;
+}
+
+.adm_popup-content p {
+  margin: 10px 0;
+}
+
+.adm_popup-content button {
+  background-color: #c41e3a;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-top: 20px;
+}
+
+.adm_popup-content button:hover {
+  background-color: #a01830;
+}
