--- a/src/adm_f/component/detailcomponent/EvaluationPopup.css
+++ b/src/adm_f/component/detailcomponent/EvaluationPopup.css
@@ -1,4 +1,4 @@
-.popup {
+.adm_popup {
     position: fixed;
     top: 0;
     left: 0;
@@ -11,7 +11,7 @@
     z-index: 1000;
   }
   
-  .popup-content {
+  .adm_popup-content {
     background-color: white;
     padding: 20px;
     border-radius: 5px;
@@ -19,25 +19,25 @@
     min-width: 300px;
   }
   
-  .popup-content input,
-  .popup-content textarea {
+  .adm_popup-content input,
+  .adm_popup-content textarea {
     width: 100%;
     margin-bottom: 10px;
     padding: 8px;
   }
   
-  .popup-content textarea {
+  .adm_popup-content textarea {
     height: 100px;
     resize: vertical;
   }
   
-  .button-group {
+  .adm_button-group {
     display: flex;
     justify-content: space-between;
     margin-top: 20px;
   }
   
-  .button-group button {
+  .adm_button-group button {
     padding: 8px 16px;
     margin: 0 5px;
     cursor: pointer;
