--- a/src/adm_f/pages/ApplicationProgram/ApplicationProgram.css
+++ b/src/adm_f/pages/ApplicationProgram/ApplicationProgram.css
@@ -1,4 +1,4 @@
-.header {
+.adm_header {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -6,13 +6,13 @@
     background: none;
   }
   
-  .header h2 {
+  .adm_header h2 {
     color: #333;
     font-size: 20px;
     font-weight: normal;
   }
   
-  .header button {
+  .adm_header button {
     padding: 8px 20px;
     background-color: #f1f3f5;
     border: none;
@@ -20,12 +20,12 @@
     cursor: pointer;
   }
   
-  .program-detail {
+  .adm_program-detail {
     padding: 20px;
     background-color: #f5f5f5;
   }
   
-  .program-wrapper {
+  .adm_program-wrapper {
     display: flex;
     gap: 40px;
     background-color: white;
@@ -33,62 +33,48 @@
     border-radius: 4px;
   }
   
-  .program-poster {
+  .adm_program-poster {
     width: 400px;
     height: auto;
     object-fit: contain;
   }
   
-  .program-description {
+  .adm_program-description {
     flex: 1;
   }
   
-  .program-description h3 {
+  .adm_program-description h3 {
     margin-bottom: 30px;
     font-size: 24px;
   }
   
-  .program-info-list {
+  .adm_program-info-list {
     display: flex;
     flex-direction: column;
     gap: 20px;
   }
   
-  .info-item {
+  .adm_info-item {
     display: flex;
     gap: 20px;
   }
   
-  .info-label {
+  .adm_info-label {
     width: 150px;
     color: #666;
   }
   
-  .info-value {
+  .adm_info-value {
     flex: 1;
   }
   
-  .student-section {
+  .adm_student-section {
     margin-top: 20px;
     padding: 20px;
     background-color: white;
   }
   
-  .student-section h3 {
+  .adm_student-section h3 {
     margin-bottom: 20px;
   }
   
-  table {
-    width: 100%;
-    border-collapse: collapse;
-  }
-  
-  th, td {
-    padding: 12px;
-    text-align: left;
-  }
-  
-  th {
-    background-color: #f8f9fa;
-    font-weight: normal;
-  }
