--- a/src/adm_f/pages/ProgramList/programlist.css
+++ b/src/adm_f/pages/ProgramList/programlist.css
@@ -1,49 +1,38 @@
-.program-list-container {
+.adm_program-list-container {
     padding: 20px;
   }
   
-  .program-list {
+  .adm_program-list {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     gap: 20px;
   }
   
-  .program-list .card {
+  .adm_program-list .card {
     width: 100%;
   }
   
-  h2 {
+  /* h2 {
     margin-bottom: 20px;
   }
-  
-  button {
-    margin-top: 20px;
-    padding: 10px 20px;
-    background-color: #007bff;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-  }
-  
-  button:hover {
-    background-color: #0056b3;
-  }
+   */
+
+
   
   @media (max-width: 1200px) {
-    .program-list {
+    .adm_program-list {
       grid-template-columns: repeat(3, 1fr);
     }
   }
   
   @media (max-width: 900px) {
-    .program-list {
+    .adm_program-list {
       grid-template-columns: repeat(2, 1fr);
     }
   }
   
   @media (max-width: 600px) {
-    .program-list {
+    .adm_program-list {
       grid-template-columns: 1fr;
     }
   }
